--- a/contrib/gitian-descriptors/gitian-win.yml
+++ b/contrib/gitian-descriptors/gitian-win.yml
@@ -25,7 +25,7 @@ packages:
 - "rename"
 remotes:
 - "url": "https://github.com/zimbora/dsw.git"
-- "url": "/home/jsilva/dsw"
+  "dir": "dsw"
 files: []
 script: |
   set -e -o pipefail
