--- a/contrib/gitian-descriptors/gitian-linux-arm_64.yml
+++ b/contrib/gitian-descriptors/gitian-linux-arm_64.yml
@@ -40,7 +40,8 @@ script: |
   set -e -o pipefail
 
   BASE_NAME="__decenomy__"
-  HOSTS="x86_64-pc-linux-gnu"
+  ZIP_NAME="__DSW__"
+  HOSTS="aarch64-linux-gnu"
   WRAP_DIR=$HOME/wrapped
   FAKETIME_HOST_PROGS="gcc g++"
   FAKETIME_PROGS="date ar ranlib nm"
@@ -87,10 +88,6 @@ script: |
   create_global_faketime_wrappers "2000-01-01 12:00:00"
   create_per-host_faketime_wrappers "2000-01-01 12:00:00"
   export PATH=${WRAP_DIR}:${PATH}
-
-  EXTRA_INCLUDES_BASE=$WRAP_DIR/extra_includes
-  mkdir -p $EXTRA_INCLUDES_BASE
-
   # Overrides default compiler
   for prog in gcc g++; do
   rm -f ${WRAP_DIR}/${prog}
@@ -121,19 +118,21 @@ script: |
     # Create the release tarball
     #make clean
     ./autogen.sh
-    ./configure --enable-glibc-back-compat --prefix=$(pwd)/depends/${i} LDFLAGS="-static-libstdc++" --enable-cxx --enable-static --disable-shared --disable-debug --disable-tests --disable-bench --with-pic --enable-upnp-default CPPFLAGS="-fPIC -O3" CXXFLAGS="-fPIC -O3"
+    ./configure --prefix=$(pwd)/depends/${i} --disable-debug --disable-tests --disable-bench --enable-upnp-default CFLAGS="-O3" CXXFLAGS="-O3"
     make -j $(nproc) HOST=${i}
   done
 
-  strip -s src/${BASE_NAME}d src/${BASE_NAME}-cli src/${BASE_NAME}-tx src/qt/${BASE_NAME}-qt
-  mkdir -p deploy/linux64
-  cp src/${BASE_NAME}d src/${BASE_NAME}-cli src/${BASE_NAME}-tx src/qt/${BASE_NAME}-qt deploy/linux64/
-  cd deploy/linux64
+  #strip -s src/${BASE_NAME}d src/${BASE_NAME}-cli src/${BASE_NAME}-tx src/qt/${BASE_NAME}-qt
+  mkdir -p deploy/arm64
+  cp src/${BASE_NAME}d src/${BASE_NAME}-cli src/${BASE_NAME}-tx src/qt/${BASE_NAME}-qt deploy/arm64/
+  cd deploy/arm64
 
-  FILENAMES=$(find ${BASE_NAME}* | sort)
-  for i in ${FILENAMES}; do
-    echo ${i} | tar --mtime="$REFERENCE_DATETIME" --no-recursion --mode='u+rw,go+r-w,a+X' --owner=0 --group=0 -c -T - | gzip -9n > ${OUTDIR}/${i}-linux64.tar.gz
-  done
+  #FILENAMES=$(find ${BASE_NAME}* | sort)
+  #for i in ${FILENAMES}; do
+  #  echo ${i} | tar --mtime="$REFERENCE_DATETIME" --no-recursion --mode='u+rw,go+r-w,a+X' --owner=0 --group=0 -c -T - | gzip -9n > ${OUTDIR}/${i}-arm64.tar.gz
+  #done
+  find ${BASE_NAME}* | sort | tar --no-recursion --mode='u+rw,go+r-w,a+X' --owner=0 --group=0 -c -T - | gzip -9n > ${OUTDIR}/${ZIP_NAME}-linux64.tar.gz
 
   echo $OUTDIR
+
 
