--- a/contrib/gitian-descriptors/gitian-linux-x86_64.yml
+++ b/contrib/gitian-descriptors/gitian-linux-x86_64.yml
@@ -3,7 +3,7 @@ name: "dsw-linux-6.0"
 enable_cache: true
 distro: "ubuntu"
 suites:
-- "bionic"
+- $DOCKER_IMAGE_HASH
 architectures:
 - "amd64"
 packages:
