--- a/.github/workflows/gitian-builder.yml
+++ b/.github/workflows/gitian-builder.yml
@@ -32,6 +32,14 @@ jobs:
 
       - name: Run gitian-build
         run: |
-          export NAME=satoshi
+          export NAME=$GITHUB_ACTOR
           export BRANCH=develop
           ./gitian-build.py --docker -b -c -o l --detach-sign $NAME $BRANCH -j 12 -m 24000
+
+      - name: Commit and push
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add dsw-binaries gitian.sigs
+          git commit -m "Commit changes in dsw-binaries and gitian.sigs"
+          git push
