--- a/.github/workflows/gitian-builder.yml
+++ b/.github/workflows/gitian-builder.yml
@@ -1,10 +1,13 @@
 name: Run gitian-builder
 
 on:
-  push:
-    branches:
-      - develop  # Change this to your main branch
-
+  #push:
+  #  branches:
+  #    - develop  # Change this to your main branch
+  release:
+    types:
+      - created  # Trigger the workflow when a new release is created
+      
 jobs:
   run-python-script:
     runs-on: ubuntu-latest
