--- a/.github/workflows/share-sigs.yml
+++ b/.github/workflows/share-sigs.yml
@@ -17,6 +17,26 @@ jobs:
           ref: main  # Adjust to the branch or tag you want to check out
           #token: ${{ secrets.PAT_TOKEN }}
 
-      - name: List
+      - name: Create and Checkout New Branch
         run: |
-          ls
+          BRANCH_NAME="sigs-${GITHUB_ACTOR}"
+          git checkout -b $BRANCH_NAME
+        continue-on-error: true  # This is set to continue if the branch already exists
+
+      - name: Add Files to the Branch
+        run: |
+        
+          mkdir -p develop-linux/${GITHUB_ACTOR}
+          touch develop-linux/${GITHUB_ACTOR}/dsw-linux-6.0-build.assert
+          git add .
+          git commit -m "Adds sigs"
+        continue-on-error: true
+
+      - name: Push Changes to Repository
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+        run: |
+          BRANCH_NAME="sigs-${GITHUB_ACTOR}"
+          git push origin $BRANCH_NAME
+
+      
