--- a/.github/workflows/share-sigs.yml
+++ b/.github/workflows/share-sigs.yml
@@ -28,8 +28,8 @@ jobs:
         
           mkdir -p develop-linux/${GITHUB_ACTOR}
           touch develop-linux/${GITHUB_ACTOR}/dsw-linux-6.0-build.assert
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "lucas.ua.eet@gmail.com"
+          git config --local user.name "${GITHUB_ACTOR}"
           git add .
           git commit -m "Adds sigs"
         continue-on-error: true
