--- a/.github/workflows/share-sigs.yml
+++ b/.github/workflows/share-sigs.yml
@@ -20,6 +20,8 @@ jobs:
       - name: Create and Checkout New Branch
         run: |
           BRANCH_NAME="sigs-${GITHUB_ACTOR}"
+          git config --global user.email "lucas.ua.eet@gmail.com"
+          git config --global user.name "${GITHUB_ACTOR}"
           git remote set-url origin https://${{ secrets.PAT_TOKEN }}@github.com/zimbora/gitian.sigs.git
           git checkout -b $BRANCH_NAME
         continue-on-error: true  # This is set to continue if the branch already exists
