--- a/.github/workflows/share-sigs.yml
+++ b/.github/workflows/share-sigs.yml
@@ -7,7 +7,8 @@ on:
 
 jobs:
   checkout_repository:
-    runs-on: ubuntu-latest
+    #runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
       - name: Checkout Source Repository
