--- a/.github/workflows/share-sigs.yml
+++ b/.github/workflows/share-sigs.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - develop  # Adjust to the branch you want to trigger the action
-
+permissions:
+  contents: write
+  
 jobs:
   checkout_repository:
     #runs-on: ubuntu-latest
@@ -12,7 +14,7 @@ jobs:
 
     steps:
       - name: Checkout Source Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           repository: zimbora/gitian.sigs
           ref: main  # Adjust to the branch or tag you want to check out
