--- a/.github/workflows/gitian-builder.yml
+++ b/.github/workflows/gitian-builder.yml
@@ -17,6 +17,35 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: dsw
+          
+      - name: Checkout Source Repository
+        uses: actions/checkout@v3
+        with:
+          repository: zimbora/gitian.sigs
+          ref: main  # Adjust to the branch or tag you want to check out
+          token: ${{ secrets.PAT_TOKEN }}
+          path: gitian.sigs
+
+      - name: Create and Checkout New Branch
+        run: |
+          BRANCH_NAME="sigs-${GITHUB_ACTOR}"
+          git config --global user.email "lucas.ua.eet@gmail.com"
+          git config --global user.name "${GITHUB_ACTOR}"
+          git checkout -b $BRANCH_NAME
+        continue-on-error: true  # This is set to continue if the branch already exists
+
+      - name: Add Files to the Branch
+        run: |
+          mkdir -p develop-linux/${GITHUB_ACTOR}
+          touch develop-linux/${GITHUB_ACTOR}/dsw-linux-6.0-build.assert
+          git add .
+          git commit -m "Adds sigs"
+        continue-on-error: true
+
+      - name: Push Changes to Repository
+        run: |
+          BRANCH_NAME="sigs-${GITHUB_ACTOR}"
+          git push origin $BRANCH_NAME
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -49,5 +78,4 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add $GITHUB_ACTOR/dsw-binaries $GITHUB_ACTOR/gitian.sigs
-          git commit -m "Commit changes in dsw-binaries and gitian.sigs"
-          git push
+*/
