--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
 
       - name: Create and Checkout New Branch
         run: |
+          cd gitian.sigs
           BRANCH_NAME="sigs-${GITHUB_ACTOR}"
           git config --global user.email "lucas.ua.eet@gmail.com"
           git config --global user.name "${GITHUB_ACTOR}"
