--- a/.github/workflows/gitian-builder.yml
+++ b/.github/workflows/gitian-builder.yml
@@ -1,12 +1,12 @@
 name: Run gitian-builder
 
 on:
-  #push:
-  #  branches:
-  #    - develop  # Change this to your main branch
-  release:
-    types:
-      - created  # Trigger the workflow when a new release is created
+  push:
+    branches:
+      - gitian-builder  # Change this to your main branch
+  #release:
+    #types:
+      #- created  # Trigger the workflow when a new release is created
       
 jobs:
   run-python-script:
@@ -25,27 +25,6 @@ jobs:
           ref: main  # Adjust to the branch or tag you want to check out
           token: ${{ secrets.PAT_TOKEN }}
           path: gitian.sigs
-
-      - name: Create and Checkout New Branch
-        run: |
-          BRANCH_NAME="sigs-${GITHUB_ACTOR}"
-          git config --global user.email "lucas.ua.eet@gmail.com"
-          git config --global user.name "${GITHUB_ACTOR}"
-          git checkout -b $BRANCH_NAME
-        continue-on-error: true  # This is set to continue if the branch already exists
-
-      - name: Add Files to the Branch
-        run: |
-          mkdir -p develop-linux/${GITHUB_ACTOR}
-          touch develop-linux/${GITHUB_ACTOR}/dsw-linux-6.0-build.assert
-          git add .
-          git commit -m "Adds sigs"
-        continue-on-error: true
-
-      - name: Push Changes to Repository
-        run: |
-          BRANCH_NAME="sigs-${GITHUB_ACTOR}"
-          git push origin $BRANCH_NAME
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -70,12 +49,12 @@ jobs:
 
       - name: Commit and push
         run: |
-          ls
-          mkdir -p dsw/$GITHUB_ACTOR/gitian.sigs
-          cp -r dsw-binaries dsw/$GITHUB_ACTOR/
-          cp -r gitian.sigs/develop* dsw/gitian.sigs
-          cd dsw
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add $GITHUB_ACTOR/dsw-binaries $GITHUB_ACTOR/gitian.sigs
-*/
+          cd gitian.sigs
+          BRANCH_NAME="sigs-${GITHUB_ACTOR}"
+          git config --global user.email "actions@github.user.com"
+          git config --global user.name "${GITHUB_ACTOR}"
+          git checkout -b $BRANCH_NAME
+          git add .
+          git commit -m "Adds sigs"
+          git push origin $BRANCH_NAME
+
