--- a/.github/workflows/gitian-builder.yml
+++ b/.github/workflows/gitian-builder.yml
@@ -44,8 +44,10 @@ jobs:
 
       - name: Run gitian-build
         run: |
+          cd dsw
           export NAME=$GITHUB_ACTOR
           export BRANCH=develop
+          cd ..
           ./gitian-build.py --docker -b -c -o l --detach-sign $NAME $BRANCH -j 12 -m 24000
 
       - name: Commit and push
