--- a/.github/workflows/gitian-builder.yml
+++ b/.github/workflows/gitian-builder.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
+          ref: develop
           path: dsw
           
       - name: Checkout Source Repository
