--- a/.github/workflows/gitian-builder.yml
+++ b/.github/workflows/gitian-builder.yml
@@ -2,11 +2,11 @@ name: Run gitian-builder
 
 on:
   push:
-    branches:
-      - gitian-builder  # Change this to your main branch
-  #release:
-    #types:
-      #- created  # Trigger the workflow when a new release is created
+    #branches:
+      #- gitian-builder  # Change this to your main branch  
+  release:
+    types:
+      - created  # Trigger the workflow when a new release is created
 
 jobs:
   run-python-script:
@@ -20,6 +20,10 @@ jobs:
           ref: develop
           path: dsw
 
+      - name: Get release tag
+        run: |
+          echo "BRANCH=${{ github.event.release.tag_name }}" >> $GITHUB_ENV
+          
       - name: Checkout Source Repository
         uses: actions/checkout@v3
         with:
@@ -46,20 +50,20 @@ jobs:
         run: |
           cd dsw
           export NAME=$GITHUB_ACTOR
-          export BRANCH=develop
+          #export BRANCH=develop
           cd ..
           ./gitian-build.py --docker -b -c -o l --detach-sign $NAME $BRANCH -j 12 -m 24000
 
       - name: Commit and push
         run: |
           cd gitian.sigs
-          BRANCH_NAME="sigs-${GITHUB_ACTOR}"
+          BRANCH_NAME="sigs-${BRANCH}-${GITHUB_ACTOR}"
           git config --global user.email "actions@github.user.com"
           git config --global user.name "${GITHUB_ACTOR}"
           git checkout -b $BRANCH_NAME
           git add .
           git diff-index --quiet HEAD || git commit -m "new release" && git push origin $BRANCH_NAME
-          #match=$(python verify_sigs.py)
+          match=$(python verify_sigs.py)
           if [ $match == "False" ]; then
             echo "!! Error: Hashes do not match"
             #exit 1
